# terraform-provider-pyvider

./: .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trufflehog-exclude-paths.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  FINAL_SESSION_REPORT.md  INTERIM_RESULTS.md  Makefile  PLATING_MIGRATION_STATUS.md  PLATING_MIGRATION_STATUS_UPDATED.md  README.md  REUSE.toml  SESSION_SUMMARY.md  VERSION  analyze_stdlib.py  build-offline.ps1  build-pspf-manual.py  buildconfig.toml  env.ps1  env.sh  import_trace.py  mkdocs-local.yml  mkdocs.yml  providebot.2025-10-16.private-key.pem  pyproject.toml  pyvider.toml  rebuild-pspf.ps1  requirements-new.txt  requirements.in  test-build-local.sh  test_apply.tf  test_discovery.py  test_env.py  test_minimal.py  (+10 more)
.claude/: settings.local.json
.garnish-tests/data_source_env_variables_test/: env_variables.tf
.garnish-tests/data_source_file_info_test/: file_info.tf  file_info_basic.tf  file_info_with_resource.tf
.garnish-tests/data_source_http_api_test/: http_api.tf
.garnish-tests/data_source_lens_jq_test/: lens_jq.tf  lens_jq_advanced_audit.tf
.garnish-tests/data_source_mixed_map_test_test/: mixed_map_test.tf
.garnish-tests/data_source_nested_resource_test_test/: nested_resource_test.tf
.garnish-tests/data_source_provider_config_reader_test/: provider_config_reader.tf
.garnish-tests/fixtures/: master_audit.jq
.garnish-tests/function_collection_functions_test/: collection_functions.tf
.garnish-tests/function_lens_jq_test/: lens_jq.tf
.garnish-tests/function_lower_test/: lower.tf
.garnish-tests/function_numeric_functions_test/: numeric_functions.tf
.garnish-tests/function_replace_test/: replace.tf
.garnish-tests/resource_file_content_test/: file_content.tf  file_content_basic.tf  file_content_with_directory.tf
.garnish-tests/resource_local_directory_test/: local_directory.tf
.garnish-tests/resource_private_state_verifier_test/: private_state_verifier.tf
.garnish-tests/resource_timed_token_test/: timed_token.tf
.garnish-tests/resource_warning_example_test/: warning_example.tf
.github/scripts/: download-launcher.sh  inject-version.sh  install-provider.sh  run-conformance-suite.sh  sign-release.sh  single-test-verification.sh
.github/workflows/: build-provider.yml  build-release.yml  conformance-tests.yml  release.yml  test-build.yml  test-conformance.yml
.plating-tests/function_lens_jq_test/: lens_jq.tf
.plating-tests/function_string_manipulation_test/: string_manipulation.tf
.provide/foundry/: base-mkdocs.yml  gen_ref_pages.py
.soup-cache/: test-results.json
ci/: record-conformance.sh  record-to-cast.py  retime-cast.py
components/capabilities/: api.py
components/data_sources/: __init__.py  env_variables.py  file_info.py  http_api.py  jq.py  jq_cty.py  nested_data_test_suite.py  provider_config_reader.py
components/functions/: collection_functions.py  jq.py  jq_cty.py  numeric_functions.py  string_manipulation.py  type_conversion_functions.py
components/helpers/: __init__.py  jq_cty_processor.py  jq_function.py  jq_processor.py
components/resources/: __init__.py  file_content.py  local_directory.py  null_resource.py  private_state_verifier.py  timed_token.py  warning_example.py
components/tests/: test_data_source_env_variables.py  test_file_content.py  test_jq_advanced_integration.py  test_jq_architecture.py  test_jq_data_lifecycle.py  test_jq_data_source_integration.py  test_jq_lifecycle_and_robustness.py  test_jq_processor_contract.py  test_jq_processor_integration.py  test_jq_wire_protocol.py  test_resource_and_function_contracts.py  test_resource_lifecycle_contract.py  test_tdd_function_semantics.py  test_tdd_stdlib_functions.py
components/tf/: test_tf_run.sh
docs/: add.md  auto-commit-workflow-test-status.md  env_variables.md  file_content.md  file_info.md  functions.md  garnish-improvements.md  getting-started.md  hooks.py  http_api.md  index.md  lens_jq.md  local_directory.md  lookup.md  nested_data_test_suite.md  private_state_verifier.md  provider_config_reader.md  soup-stir-enhancement-spec.md  timed_token.md  warning_example.md
docs-new/: index.md
docs-new/functions/: format.md  split.md  to_snake_case.md  tostring.md
docs-new/how-to-guides/: common-patterns.md
docs-new/resources/: private_state_verifier.md
docs-old/: index.md
docs-old/data-sources/: env_variables.md  file_info.md  provider_config_reader.md
docs-old/functions/: add.md  format.md  join.md  length.md  lower.md  max.md  to_snake_case.md  tostring.md  upper.md
docs-old/resources/: local_directory.md
docs/data-sources/: env_variables.md  file_info.md  http_api.md  lens_jq.md  mixed_map_test.md  nested_data_processor.md  nested_data_test_suite.md  nested_resource_test.md  provider_config_reader.md  pyvider_env_variables.md  pyvider_file_info.md  pyvider_http_api.md  pyvider_lens_jq.md  pyvider_mixed_map_test.md  pyvider_nested_data_processor.md  pyvider_provider_config_reader.md  pyvider_simple_map_test.md  pyvider_structured_object_test.md  simple_map_test.md  structured_object_test.md
docs/data_source/: env_variables.md  file_info.md  http_api.md  lens_jq.md  nested_data_test_suite.md  provider_config_reader.md
docs/data_sources/: env_variables.md  file_info.md  http_api.md  jq_cty.md  lens_jq.md  (+8 more)
examples/: README.md  main.tf
guides/: 01-zesty.md  02-getting-started.md  04-build-your-own-provider.md  build-your-own-provider.md  common-patterns.md  getting-started.md  provider-overview.tmpl.md  provider-tour.md  pyvider-orientation.md  troubleshooting.md
keys/: flavor-private.key  flavor-public.key  provider-private.key  provider-public.key
run/: index.html
scripts/: build-docs-manual.sh  build-docs.sh  check-registry.sh  clean-test-artifacts.sh  clean_artifacts.sh  generate_docs.py  generate_docs_and_examples.sh  inject_global_partials.py  inject_partials.py  mkdocs_hooks.py  sync-registry.sh  test-garnish.sh  test-plating.sh  validate_all_examples.sh  validate_examples.sh
test-simple/: main.tf
test-working/: main.tf
(+707 files in other folders)
